@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T16:10:26Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2022-05-19T00:43:30Z",
+  "count" : 14,
+  "count_minmax" : [ 3, 14 ],
+  "count_decinc" : [ -0, +14 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
