@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-18T16:10:26Z",
-  "count_outdated" : 1144,
-  "uniques_outdated" : 70,
-  "count" : 1541,
+  "timestamp" : "2022-05-19T00:43:30Z",
+  "count_outdated" : 1145,
+  "uniques_outdated" : 71,
+  "count" : 1552,
   "uniques" : 85,
   "views" : [
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 59,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
+      "count": 14,
+      "count_minmax": [ 3, 14 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
