@@ -1,12 +1,7 @@
 {
-  "count": 397,
+  "count": 407,
   "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 59,
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 3,
+      "count": 14,
       "uniques": 1
     }
   ]
