@@ -1,3 +1,10 @@
+2022-05-19T00:43:30Z:
+* notice: last 14d: unq all: 3 407
+* notice: prev accum: outdated-unq outdated-all / unq all: 70 1144 / 85 1541
+* notice: next accum: outdated-unq outdated-all / unq all: 71 1145 / 85 1552
+* notice: prev exec diff / last date diff / accum: unq all: +0 +11 -0 -0 / +1 +14 -0 -0 / 1 14
+* notice: changed dates: [2022-05-18]
+
 2022-05-18T16:10:26Z:
 * notice: last 14d: unq all: 3 397
 * notice: prev accum: outdated-unq outdated-all / unq all: 70 1144 / 84 1538
